# Ice2CppCmakeBuilder

./: .travis.yml  CMakeLists.txt  README.md  iceGenerator.cmake  test.cpp
example/ice/: hello.ice  hello2.ice
example/ice2/: second_hello.ice
